--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,127 @@
 .App {
-  text-align: center;
+    text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+    height: 40vmin;
+    pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+    .App-logo {
+        animation: App-logo-spin infinite 20s linear;
+    }
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    min-height: 100vh;
+    min-width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+/* form csss */
+
+.frm-container {
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    /* font-size: calc(10px + 2vmin); */
+}
+form {
+    /* border: 1px solid #ff0000; */
+    border-radius: 12px;
+    padding-bottom: 2rem;
+    background-color: #3887cc;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+form > div {
+    display: table-row;
+    width: 20vw;
+    line-height: 2rem;
+}
+label {
+    display: table-cell;
+    font-size: 1.1rem;
+    text-align: center;
+}
+input {
+    display: table-cell;
+    width: 250px;
+    margin: auto;
+    border-color: blue;
+    background: #fff;
+    border-radius: 5px;
+    outline: none;
+    border: none;
+    font-size: 15px;
+}
+input::placeholder {
+    color: #8d8d8d;
+}
+.btn-save {
+    margin-top: 0.9rem;
+    padding: 6px 35px;
+    cursor: pointer;
+    border-radius: 6px;
+    border: none;
+    outline: none;
+    font-size: 1rem;
+    transition: all 0.3s ease-in-out;
+    /* background-color: blue; */
+}
+.btn-save:hover {
+    background: rgb(40, 65, 63);
+    color: #ffffff;
+    /* background: transparent; */
+}
+
+/* final data css */
+
+.finalData {
+    border: 2px solid #fff;
+    height: 10vh;
+    width: 50vw;
+    color: #000000;
+    background-color: rgb(76, 141, 172);
+    position: absolute;
+    margin: auto;
+    bottom: 5%;
+    left: 25%;
+    border-radius: 10px;
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    border: none;
+}
+
+p {
+    font-size: 1.2rem;
+    color: #fff;
 }
